# sider

./: Makefile  README.md  docker-compose.dev.yaml  docker-compose.yaml
.github/workflows/: tests.yml
clients/php/: .dockerignore  .gitignore  Dockerfile  composer.json  phpunit.xml
clients/php/src/private/: Command.php  ConcreteClient.php  SocketClient.php  SocketConnection.php
clients/php/src/public/: Client.php  ClientSetting.php  Rate.php
clients/php/tests/: ClientTestCase.php  CountTest.php  KeepTest.php  KeepValueTest.php  QueueTest.php  RateTest.php  StoreValueTest.php
server/: .dockerignore  CMakeLists.txt  Dockerfile  main.cpp  server.cpp  tests.cpp
server/src/: Clock.cpp  Clock.h  Logger.h  Socket.cpp  Socket.h  Time.cpp  Time.h
server/src/Command/: ClearCommand.cpp  Command.h  CountCommand.cpp  DequeueCommand.cpp  GetCommand.cpp  KeepCommand.cpp  QueueCommand.cpp  RateCommand.cpp  TruncateCommand.cpp
server/src/Command/Commands/: CountCommand.cpp  GetCommand.cpp  KeepCommand.cpp
server/src/Registry/: Registry.cpp  Registry.h
server/src/Registry/Register/: Register.cpp  Register.h  Ttl.cpp  Ttl.h
server/src/Registry/Register/Registers/: CounterRegister.cpp  KeeperRegister.cpp
server/src/Socket/: Socket.cpp  Socket.h
server/src/Storage/: Entry.h  Storage.cpp  Storage.h
server/src/Storage/Entries/: CounterEntry.cpp  KeeperEntry.cpp  QueueEntry.cpp  RaterEntry.cpp
server/src/Type/: CounterType.cpp  KeeperType.cpp  QueueType.cpp  RaterType.cpp
server/tests/: BaseTest.h  CountCommandTest.cpp  KeepCommandTest.cpp  NilResultTest.cpp
server/tests/Command/: AdvanceableTime.cpp  AdvanceableTime.h  BasicFeaturesTest.cpp  ClearCommandTest.cpp  CommandTest.h  CommonCommand.cpp  CountCommandTest.cpp  KeepCommandTest.cpp  QueueCommandTest.cpp  RateCommandTest.cpp  Test.h  TruncateCommandTest.cpp
